src/public/css/layout.less
* {
    box-sizing: border-box;
}

body,
input,
textarea,
select,
button,
a.button,
input[type="submit"] {
    font: 16px/1.5 'Source Sans Pro', 'Lucida Grande', Helvetica, Arial, sans-serif;
    color: #606060;
}

html, body {
    height: 100%;
}
body {
    display: flex;
    flex-direction: column;
    background-color: #f5f5f5;
}

.page-content,
.page-header > .container,
.copyright-footer > .container,
#main-menu > .container {
    max-width: 1024px;
    width: 100%;
    margin: 0 auto;
    padding-left: 15px;
    padding-right: 15px;
}

.page-header,
.copyright-footer,
#main-menu {
    z-index: 100;
}

.page-header {
    background-color: @primaryColor;
    color: @textOverPrimaryColor;
    width: 100%;
    font-size: 20px;
    padding-top: 20px;
    padding-bottom: 20px;

    .container {
        display: flex;
        justify-content: space-between;
        align-items: center;

        h1 {
            margin-bottom: 0;
        }

        a {
            margin-left: 10px;
        }
    }
}

.copyright-footer {
    background-color: #efefef;
    color: #737373;
    width: 100%;
    font-size: 14px;
    padding-top: 15px;
    padding-bottom: 15px;
    margin-top: auto;

    .container {
        text-align: center;
    }

    a {
        color: #737373;

        &:hover {
            color: black;
        }
    }
}

a {
    color: @highlightColor;
    text-decoration: none;
}

h1 {
    font-size: 35px;
}
h2 {
    font-size: 30px;
}
h3 {
    font-size: 26px;
}
h4 {
    font-size: 22px;
}
h1, h2, h3, h4 {
    line-height: 1.2em;
}

.page-content,
.modal {
    padding-top: 20px;
    padding-bottom: 20px;

    p, ul, ol {
        margin-bottom: 1em;
    }
    h1, h2, h3, h4, h5, h6 {
        margin-bottom: 0.5em;
    }
    ul, ol {
        list-style-type: disc;
        list-style-position: inside;
    }
    li {
        margin-bottom: 0.5em;
    }
}

a,
button,
input[type="submit"] {
    cursor: pointer;
}

b, strong {
    font-weight: bold;
}

i, em {
    font-style: italic;
}

::selection {
    background: @highlightColor;
    color: white;
}

.no-bottom-margin {
    margin-bottom: 0 !important;
}

@media only screen and (max-width: 600px) {
    .page-header {
        display: flex;
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        min-height: 55px;
        max-height: 55px;
        padding-top: 0;
        padding-bottom: 0;
        .container {
            justify-content: center;
        }
        h1 {
            font-size: 18px;
            text-align: center;
        }
    }
    #main-menu {
        position: fixed;
        bottom: 0;
        left: 0;
        right: 0;
        min-height: 55px;
        max-height: 55px;
    }
    .page-content {
        padding-top: 75px;
        padding-bottom: 60px;
    }
    .copyright-footer {
        display: none;
    }
}

@media only screen and (min-width: 601px) {
    .page-header {
        order: 1;
        h1 {
            font-size: 30px;
        }
    }
    #main-menu {
        order: 2;
    }
    .page-content {
        order: 3;
    }
    .copyright-footer {
        order: 4;
    }
}

.side-logo {
    float: right;
    max-width: 150px;
    max-height: 150px;
    margin-left: 1em;

    @media only screen and (max-width: 600px) {
        max-width: 125px;
        max-height: 125px;
    }
}

